[package]
name = "yubimask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#yubico = "0.10.0"
yubico_manager = "0.9.0"
hex = "0.4.3"
slint = "0.2.1"
argon2 = "0.4.0"
secp256k1 = {version = "0.20.3", features = ["rand"]}
web3 = "0.18.0"
tiny-keccak = "1.5.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
rand = "0.5.6" # should we use rand_core instead for OsRng?
aes-gcm = "0.9.4"
