[package]
name = "yubimask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yubico_manager = "0.9.0"
hex = "0.4.3"
#slint = "0.2.1" # Removing this dependency for possible security concerns
argon2 = "0.4.0"
secp256k1 = {version = "0.20.3", features = ["rand"]}
web3 = "0.17.0" # Was using 0.18.0 but it didn't work with the version of secp256k1
tiny-keccak = "1.5.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
rand = "0.5.6" # should we use rand_core instead for OsRng?
rand_core = {version = "0.6.3", features = ["std"]}
aes-gcm = "0.9.4"
rpassword = "6.0.1"
clap = {version = "3.1.9", features = ["derive"] }
tokio = {version = "1.17.0", features = ["full"]}
bip32 = {version = "0.3.0", features = ["secp256k1-ffi"]}
bitcoin = "0.28.1"
zeroize = "1.5.5"
colored = "2.0.0"
reqwest = "0.11.10"
nakamoto = "0.4.0"
